@@ -279,7 +279,7 @@ NConf_DEBUG::set($item_class, 'DEBUG', 'Handle class: ');
 ###
 # Title
 ###
-$item_name  = db_templates("naming_attr", $_GET["id"]);
+$item_name = db_templates("naming_attr", isset($_GET["id"]));
 echo NConf_HTML::page_title($item_class);
 echo '<div class="ui-nconf-header ui-widget-header ui-corner-tl ui-corner-tr ui-helper-clearfix">';
     echo '<div>';
